# MCPEmulate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_emulate/: __init__.py  architectures.py  server.py  session.py
tests/: test_emulate.py  test_server_integration.py
