[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-emulate"
version = "0.1.0"
description = "MCP server for CPU emulation via Unicorn, Capstone, and Keystone"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
authors = [
    { name = "LabGuy94", email = "lab@bbox3.com" },
]
keywords = ["mcp", "emulation", "unicorn", "capstone", "keystone", "reverse-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = [
    "mcp>=1.18.0",
    "unicorn>=2.0.0",
    "capstone>=5.0.0",
    "keystone-engine>=0.9.2",
    "lief>=0.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/LabGuy94/MCPEmulate"
Repository = "https://github.com/LabGuy94/MCPEmulate"
Issues = "https://github.com/LabGuy94/MCPEmulate/issues"

[project.scripts]
mcp-emulate = "mcp_emulate.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_emulate"]


[tool.pytest.ini_options]
# Unicorn's JIT engine triggers Windows SEH (access violation) during normal
# mem_map/reg_read/reg_write operations. With faulthandler enabled (pytest
# default), these print alarming native stack traces despite being benign.
faulthandler_timeout = 0
addopts = "-p no:faulthandler"